[package]
name = "kb_admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive", "env"] }
color-eyre = "0.6.1"
comfy-table = "6.0.0"
sqlx = { version = "0.6.0", features = ["postgres", "migrate", "runtime-tokio-rustls", "macros", "uuid"] }
tokio = { version = "1.19.2", features = ["macros", "rt"] }
