[package]
name = "kb_admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive", "env"] }
color-eyre = "0.6.3"
comfy-table = "7.1.3"
tokio = { version = "1.43.0", features = ["macros", "rt"] }

[dependencies.sqlx]
version = "0.8.3"
features = ["postgres", "migrate", "runtime-tokio-rustls", "macros", "uuid"]
