[package]
name = "kabalist_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["frontend"]
frontend = ["tower-http/fs"]

[dependencies]
async-trait = "0.1.83"
axum = { version = "^0.8.0-rc.1", features = ["query", "macros"] }
axum-extra = { version = "^0.10.0-rc.1", features = [
	"cookie",
	"cookie-private",
	"typed-header",
] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
color-eyre = "0.6.3"
figment = { version = "0.10.19", features = ["toml", "env"] }
kabalist_types = { path = "../types", features = ["openapi"] }
openidconnect = "3.5.0"
parking_lot = "0.12.3"
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde = "1.0.216"
serde_repr = "0.1.19"
tera = "1.20.0"
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
utoipa = { version = "5.3.0", features = ["uuid"] }
uuid = { version = "1.11.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.2"
features = ["postgres", "migrate", "runtime-tokio-rustls", "macros", "uuid"]
