[package]
name = "kabalist_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["frontend"]
frontend = ["tower-http/fs"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde = "1.0.217"
kabalist_types = { path = "../types", features = ["openapi"] }
uuid = { version = "1.11.0", features = ["serde"] }
serde_repr = "0.1.19"
axum = { version = "0.7", features = [] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
color-eyre = "0.6.3"
tokio-stream = "0.1.17"
tera = "1.20.0"
tower-http = { version = "0.6.2", features = ["cors"] }
utoipa = { version = "5.3.0", features = ["uuid"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
jwt-simple = "0.12"

[dependencies.sqlx]
version = "0.8.2"
features = ["postgres", "migrate", "runtime-tokio-rustls", "macros", "uuid"]
