[package]
name = "kabalist_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["frontend"]
frontend = ["tower-http/fs"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde = "1.0.217"
kabalist_types = { path = "../types", features = ["openapi"] }
uuid = { version = "1.12.1", features = ["serde"] }
serde_repr = "0.1.19"
axum = { version = "0.8.2", features = ["macros"] }
axum-extra = { version = "0.11.0", features = ["typed-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
color-eyre = "0.6.3"
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors"] }
utoipa = { version = "5.3.1", features = ["uuid"] }
jwt-simple = { version = "0.12", default-features = false, features = [
	"pure-rust",
] }
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
# to be update when it uses a stable axum 0.8.0 version (and when we also do)
# utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }

[dependencies.sqlx]
version = "0.8.3"
features = ["postgres", "migrate", "runtime-tokio-rustls", "macros", "uuid"]
