[package]
name = "kabalist_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kabalist_client = { path = "../client" }
color-eyre = "0.6"
promptly = "0.3.1"
rpassword = "5.0.1"
tokio = { version = "1.42.0", features = ["full"] }
yansi = "0.5.1"
clap = { version = "3.2.25", features = ["derive", "env"] }
clap_complete = "3.2.5"
itertools = "0.10.5"
