[package]
name = "kabalist_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kabalist_client = { path = "../client" }
color-eyre = "0.6"
promptly = "0.3.1"
rpassword = "7.3.1"
tokio = { version = "1.43.0", features = ["full"] }
yansi = "1.0.1"
clap = { version = "4.5.27", features = ["derive", "env"] }
clap_complete = "4.5.42"
itertools = "0.14.0"
