[package]
name = "kabalist_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "1.0.69"
kabalist_types = { path = "../types" }
