[package]
name = "kabalist_types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openapi = ["utoipa"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
uuid = { version = "1.1.2", features = ["serde"] }
utoipa = { version = "3.0.2", features = ["uuid"], optional = true }
