[package]
name = "kabalist_types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openapi = ["utoipa"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["serde"] }
utoipa = { version = "5.3.0", features = ["uuid"], optional = true }
