[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
standalone = []

[dependencies]
yew = "0.19"
yew-router = { version = "0.16" }
web-sys = "0.3"
gloo = "0.7.0"
kabalist_client = { path = "../client" }
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.137", features = ["derive"] }
itertools = "0.10.3"
futures = "0.3.26"
