[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
standalone = []

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }
web-sys = "0.3"
gloo = "0.11.0"
kabalist_client = { path = "../client" }
wasm-bindgen = "=0.2.95"
wasm-bindgen-futures = "=0.4.45"
serde = { version = "1.0.217", features = ["derive"] }
itertools = "0.14.0"
futures = "0.3.31"
